@@ -1,4 +1,6 @@
 
+	* bin/cygport.in (__prepdoc): Accept RESTRICT=postinst-doc.
+
 	* bin/cygport.in (__pkg_diff):
 	Only exclude aclocal.m4 from patch if generated by aclocal.
 	* lib/berkdb.cygclass (DIFF_EXCLUDES): Add aclocal.m4 to compensate.
